Support Task-level Resources Requirements
